...
            presenter?.viewWillDisappear()
        }
    }
    
    //MARK: - View Customization
    func customizeUI() {
        title = "Detail"
        addLeftBarButtonCustom()
        self.navigationController?.navigationBar.tintColor = UIColor(named: "AppGreen")
    }
    
    //MARK: - Populate Data
    func populateData() {
...
        phoneNumberLabel.text = "\(presenter?.currentContact?.id ?? 0)"
        userImageView.sd_setImage(with: URL(string: presenter?.currentContact?.avathar ?? ""), placeholderImage: UIImage(named: "placeHolder"), options: SDWebImageOptions.refreshCached) { (_, _, _, _) in
        }
    }
    
    func addLeftBarButtonCustom() {
        let barButton = UIBarButtonItem(title: "Edit", style: .done, target: self, action: #selector(self.leftButtonaction))
        self.navigationItem.rightBarButtonItem = barButton
    }

    //MARK: - View 
    
    @objc func leftButtonaction() {
...
