...
                                        <constraint firstItem="sF6-Dg-oVS" firstAttribute="centerX" secondItem="3T0-Xm-VAN" secondAttribute="centerX" id="y3D-8w-4bB"/>
                                    </constraints>
                                </view>
                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lyp-uz-diu">
                                    <rect key="frame" x="0.0" y="210" width="414" height="61.5"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YGo-BC-Fhj">
                                            <rect key="frame" x="20" y="20" width="130" height="20.5"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="130" id="UDe-Jq-M38"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" systemColor="secondaryLabelColor"/>
...
                                        <constraint firstAttribute="trailing" secondItem="Nhn-x2-D7p" secondAttribute="trailing" constant="10" id="sg0-yf-L5G"/>
                                    </constraints>
                                </view>
                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WXy-rm-uBv">
                                    <rect key="frame" x="0.0" y="271.5" width="414" height="62"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oij-hd-jez">
                                            <rect key="frame" x="20" y="20" width="130" height="21"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="130" id="0iF-M5-jOP"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" systemColor="secondaryLabelColor"/>
...
